# python-module-jk-exceptionhelper

./: .gitignore  HISTORY.md  README.md  packageinfo.json
examples/: example.py  example_deserialize.py  example_nested_exception.py  example_nested_exception_with_stacktrace.py  example_serialize.py  example_simple.py  example_with_deeper_stacktrace.py  test_serialize_deserialize.py
src/: README.md  pyproject.toml  setup.py
src/jk_exceptionhelper/: ExceptionObject.py  StackTraceItem.py  StackTraceProcessor.py  __init__.py  exception_helper.py
testing/: primitive.py  primtive.py  test.py  test3.py  test4a.py  test4b.py  test4c.py  test4d.py  test5a.py  test5a_CustomException.py  test5b.py  test5c_serialize_CustomException_with_extraValues.py
